--- a/TcpCatcher/TcpCatcher.csproj
+++ b/TcpCatcher/TcpCatcher.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>TcpCatcher</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>38521f90</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
