--- a/TcpCatcher/TcpCatcher.csproj
+++ b/TcpCatcher/TcpCatcher.csproj
@@ -82,6 +82,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Aristov.Common.Windows\Aristov.Common.Windows.csproj">
+      <Project>{629085CF-2899-4BA9-AEF4-7414EF48D3FF}</Project>
+      <Name>Aristov.Common.Windows</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Aristov.Common\Aristov.Common.csproj">
+      <Project>{C170BD34-D40E-4FFA-9F29-6E4F0614C6BF}</Project>
+      <Name>Aristov.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="..\Aristov.Communication.RT\Aristov.Communication.RT.projitems" Label="Shared" Condition="Exists('..\Aristov.Communication.RT\Aristov.Communication.RT.projitems')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
